--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0% 20%;
+  background: rebeccapurple;
 }
 
 code {
